--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.10.3",
     "sharp": "^0.33.5",
     "typed.js": "^2.1.0"
